# flights

./: .coverage  .cursorrules  .env  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.py
alembic/: env.py
alembic/versions/: 001_initial_migration.py  b5a99a358851_initial_migration.py
docker/api/: Dockerfile
docker/postgres/: init.sql
docker/worker/: Dockerfile  entrypoint.sh
fast_flights/: core.py
notebooks/: test_api.py
src/: config.py  design.md  implementation_plan.md  search_trip.py
src/api/: __init__.py  config.py  main.py  pytest.ini  requirements.txt  run.py
src/api/db/: __init__.py  service.py  session.py
src/api/db/repositories/: jobs.py
src/api/models/: base.py  flights.py  jobs.py
src/api/routers/: flights.py
src/api/schemas/: flights.py
src/api/services/: flights.py  search_utils.py
src/api/tests/: __init__.py  conftest.py  test_flights.py
src/fast_flights/: __init__.py  search.py
src/worker/: main.py  queue.py
src/worker/core/: flight_search_worker.py  optimizer.py  rate_limiter.py  state.py
src/worker/utils/: logger.py
