[project]
name = "flights"
version = "0.1.0"
description = "Flight search service with background processing"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "fastapi==0.104.1",
  "uvicorn==0.24.0",
  "sqlalchemy==2.0.23",
  "alembic==1.12.1",
  "asyncpg==0.29.0",
  "pydantic[email]==2.5.2",
  "pydantic-settings==2.1.0",
  "python-jose[cryptography]==3.3.0",
  "python-multipart==0.0.6",
]

[dependency-groups]
dev = [
  "pytest==7.4.3",
  "pytest-asyncio==0.21.1",
  "pytest-cov==4.1.0",
  "black==23.11.0",
  "isort==5.12.0",
  "mypy==1.7.1",
  "ruff==0.1.6",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
multi_line_output = 3
