[project]
name = "flights"
version = "0.1.0"
description = "Flight search service"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = [
  "fastapi>=0.104.1",
  "uvicorn>=0.24.0",
  "sqlalchemy>=2.0.23",
  "asyncpg>=0.29.0",
  "aio-pika>=9.3.1",
  "pydantic>=2.5.2",
  "fast_flights>=0.1.0",
]
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
  "black>=23.11.0",
  "isort>=5.12.0",
  "mypy>=1.7.1",
  "pytest>=7.4.3",
  "pytest-asyncio>=0.21.1",
]
